--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Chess</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div id="chessboard-container">
+      <canvas id="chessboard"></canvas>
+    </div>
     <script type="module" src="/chess/main.js"></script>
   </body>
 </html>
