Added flip board (need to fix promotion selector when flipping board while it's active)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
           </div>
           <div id="navigation">
             <button id="prev-move">←</button>
-            <button id="import-from-fen">Import Game from FEN</button>
+            <div id="flip-fen-import">
+              <button id="flip-board">Flip Board</button>
+              <button id="import-from-fen">Import Game from FEN</button>
+            </div>
             <button id="next-move">→</button>
           </div>
         </div>
