Implemented reset board.  Added highlight to current move in Move History, kept undone moves to show which moves can be redone.  Need to implement disambiguation for move history when two pieces can move to same square

--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
             <button id="submit-fen">Import FEN</button>
           </div>
           <div id="navigation">
-            <button id="prev-move">←</button>
+            <button id="prev-move">↩</button>
             <div id="flip-fen-import">
               <button id="flip-board">Flip Board</button>
               <button id="import-from-fen">Import Game from FEN</button>
+              <button id="reset-board">Reset Board</button>
             </div>
-            <button id="next-move">→</button>
+            <button id="next-move">↪</button>
           </div>
         </div>
       </div>
