--- a/index.html
+++ b/index.html
@@ -12,6 +12,25 @@
         <div class="chessboard-wrapper">
           <div id="chessboard-container">
             <canvas id="chessboard"></canvas>
+            <svg
+              id="chessSVG"
+              style="position: absolute; left: 0; top: 0; z-index: 2"
+              width="600"
+              height="600"
+            >
+              <defs>
+                <marker
+                  id="arrowhead"
+                  markerWidth="10"
+                  markerHeight="7"
+                  refX="0"
+                  refY="3.5"
+                  orient="auto"
+                >
+                  <polygon points="0 0, 10 3.5, 0 7" />
+                </marker>
+              </defs>
+            </svg>
           </div>
           <div id="text-areas-container">
             <textarea id="fen-box" placeholder="FEN"></textarea>
